--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>`;
     }
 
-    function showEmpty(msg='ไม่พบข้อมูล') {
+    function showEmpty(msg='CODE สินค้านี้ไม่รวมรายการ Clearance') {
       document.getElementById('result').innerHTML = `<div class="text-center text-slate-500">${msg}</div>`;
     }
 
@@ -245,3 +245,4 @@ function startQuagga(){
   </script>
 </body>
 </html>
+
