--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>`;
     }
 
-    function showEmpty(msg='ไม่พบข้อมูล') {
+    function showEmpty(msg='ไม่พบข้อมูล หรือ CODE นี้ไม่ร่วม PRO Clearance') {
       document.getElementById('result').innerHTML = `<div class="text-center text-slate-500">${msg}</div>`;
     }
 
@@ -303,3 +303,4 @@
   </script>
 </body>
 </html>
+
